OracleSelect will output ORDER BY clause in setopr when need.
 Such as LIMIT/OFFSET arguments specified.